--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.servlet.context-path=/web
 spring.datasource.url=jdbc:mariadb://db-fqep8-kr.vpc-pub-cdb.ntruss.com:3306/studydb
 spring.datasource.username=study
 #spring.datasource.password=1111
-spring.datasource.password=bitcamp!@#123
+spring.datasource.password=ncloud!#%135
 
 # mybatis
 mybatis.type-aliases-package=bitcamp.myapp.vo
